Imported from https://shashikumarraja@github.com/shashikumarraja/api_automation_boilerplate-javascript.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/Shashi Kumar Raja (shashikumarraja)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Shashi Kumar Raja (shashikumarraja)
+	label-Verified = -1..+1 group user/Shashi Kumar Raja (shashikumarraja)
+	push = group user/Shashi Kumar Raja (shashikumarraja)
+	read = group user/Shashi Kumar Raja (shashikumarraja)
+	rebase = group user/Shashi Kumar Raja (shashikumarraja)
+	removeReviewer = group user/Shashi Kumar Raja (shashikumarraja)
+	submit = group user/Shashi Kumar Raja (shashikumarraja)
+[access "refs/heads/*"]
+	create = group user/Shashi Kumar Raja (shashikumarraja)
+	push = +force group user/Shashi Kumar Raja (shashikumarraja)
+	pushMerge = group user/Shashi Kumar Raja (shashikumarraja)
+	read = group user/Shashi Kumar Raja (shashikumarraja)
+[access "refs/tags/*"]
+	push = group user/Shashi Kumar Raja (shashikumarraja)
+	push = +force group user/Shashi Kumar Raja (shashikumarraja)
